--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,8 @@
      <Compile Include="Assets\Scripts\DelayTrap.cs" />
      <Compile Include="Assets\Scripts\MoveCameraLvl01Boss.cs" />
      <Compile Include="Assets\Scripts\MovingGroundX.cs" />
+     <Compile Include="Assets\Scripts\RainCamera.cs" />
+     <Compile Include="Assets\Scripts\StopMoveCamera.cs" />
      <None Include="Assets\Downloaded Assets\trap3\badfluid@gmail.com.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
